--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "webfactorybulgaria/laravel-shop",
+    "name": "gieroj/laravel-shop",
     "description": "Package set to provide shop or e-commerce functionality (such as CART, ORDERS, TRANSACTIONS and ITEMS) to Laravel for customizable builds.",
     "license": "MIT",
     "keywords": ["shop","laravel","cart","orders","transactions","paypal","e-commerce","shopping cart","ecommerce","shopping"],
     "authors": [
         {
-            "name": "Doncho Petrov",
-            "email": "doncho.wf@gmail.com"
+            "name": "Pawel Gawron",
+            "email": "gieroj@gmail.com"
         }
     ],
     "require": {
